--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -16,13 +16,27 @@
     "clean": "gts clean",
     "compile": "tsc",
     "fix": "gts fix",
+    "dev": "ts-node-dev -r dotenv/config src/index.ts",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run lint"
   },
   "devDependencies": {
+    "@types/bunyan": "^1.8.11",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "20.8.2",
+    "dotenv": "^16.4.5",
     "gts": "^5.2.0",
-    "typescript": "~5.2.0",
-    "@types/node": "20.8.2"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "~5.2.0"
+  },
+  "dependencies": {
+    "@google-cloud/logging-bunyan": "^5.0.1",
+    "bunyan": "^1.8.15",
+    "celebrate": "^15.0.3",
+    "cors": "^2.8.5",
+    "express": "^4.19.1",
+    "helmet": "^7.1.0"
   }
 }
