--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -37,6 +37,7 @@
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "express": "^4.19.1",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "http-status-codes": "^2.3.0"
   }
 }
