Start adding Auth0, Knex

--- a/backend/api/.env.template
+++ b/backend/api/.env.template
@@ -1,5 +1,13 @@
+AUTH0_CLIENT_ID=my-auth0-client-id
+AUTH0_CLIENT_SECRET=my-auth0-client-secret
+AUTH0_DOMAIN=my-auth0-domain
 GOOGLE_CLOUD_PROJECT_ID=my-google-cloud-project-id
 K_REVISION=my-revision
 K_SERVICE=hellomyfriendo-api
 LOG_LEVEL=info
+PGDATABASE=hellomyfriendo
+PGHOST=localhost
+PGPASSWORD=postgres
+PGPORT=5432
+PGUSERNAME=postgres
 PORT=8080
