--- a/backend/api/.gitignore
+++ b/backend/api/.gitignore
@@ -235,3 +235,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,linux,windows,node,visualstudiocode
+
+#
+postgres-data
