--- a/backend/api/.env.template
+++ b/backend/api/.env.template
@@ -1,3 +1,4 @@
+AUTH0_API_IDENTIFIER=https://my-auth0-api-identifier
 AUTH0_CLIENT_ID=my-auth0-client-id
 AUTH0_CLIENT_SECRET=my-auth0-client-secret
 AUTH0_DOMAIN=my-auth0-domain
