--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -44,6 +44,7 @@
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "express": "^4.19.1",
+    "express-oauth2-jwt-bearer": "^1.6.0",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "knex": "^3.1.0",
