--- a/backend/api/.env.template
+++ b/backend/api/.env.template
@@ -3,6 +3,7 @@ AUTH0_CLIENT_ID=my-auth0-client-id
 AUTH0_CLIENT_SECRET=my-auth0-client-secret
 AUTH0_DOMAIN=my-auth0-domain
 GOOGLE_CLOUD_PROJECT_ID=my-google-cloud-project-id
+GOOGLE_MAPS_API_KEY=my-google-maps-api-key
 K_REVISION=my-revision
 K_SERVICE=hellomyfriendo-api
 LOG_LEVEL=info
