--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -32,13 +32,16 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "20.8.2",
+    "@types/pg": "^8.11.4",
     "dotenv": "^16.4.5",
     "gts": "^5.2.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "~5.2.0"
   },
   "dependencies": {
+    "@google-cloud/language": "^6.2.0",
     "@google-cloud/logging-bunyan": "^5.0.1",
+    "@googlemaps/google-maps-services-js": "^3.3.42",
     "auth0": "^4.3.1",
     "bunyan": "^1.8.15",
     "celebrate": "^15.0.3",
